    - lua: lua interpreter front-end converted to a script from a native command.
    - dfusion: misc scripts with a text based menu.
    - embark: lets you embark anywhere.
    - lever: list and pull fort levers from the dfhack console.
    - stripcaged: mark items inside cages for dumping, eg caged goblin weapons.
  New GUI scripts:
    - gui/guide-path: displays the cached path for minecart Guide orders.
    - gui/workshop-job: displays inputs of a workshop job and allows tweaking them.
    - gui/workflow: a front-end for the workflow plugin (part inspired by falconne).
    - gui/assign-rack: works together with a binary patch to fix weapon racks.
    - gui/gm-editor: an universal editor for lots of dfhack things.
    - gui/companion-order: a adventure mode command interface for your companions.
  New binary patches (for use with binpatch):
    - armorstand-capacity: doubles the capacity of armor stands.
    - custom-reagent-size: lets custom reactions use small amounts of inputs.
    - deconstruct-heapfall: stops some items still falling on head when deconstructing.
    - deconstruct-teleport: stops items from 16x16 block teleporting when deconstructing.
    - hospital-overstocking: stops hospital overstocking with supplies.
    - training-ammo: lets dwarves with quiver full of combat-only ammo train.
    - weaponrack-unassign: fixes bug that negates work done by gui/assign-rack.
  Workflow plugin:
    - properly considers minecarts assigned to routes busy.
    - code for deducing job outputs rewritten in lua for flexibility.
    - logic fix: collecting webs produces silk, and ungathered webs are not thread.
    - items assigned to squads are considered busy, even if not in inventory.
    - shearing and milking jobs are supported, but only with generic MILK or YARN outputs.
    - workflow announces when the stock level gets very low once a season.
  New Fix Armory plugin:
    Together with a couple of binary patches and the gui/assign-rack script,