@@ -23,6 +23,7 @@ DFHack future
     - embark: lets you embark anywhere.
     - lever: list and pull fort levers from the dfhack console.
     - stripcaged: mark items inside cages for dumping, eg caged goblin weapons.
+    - soundsense-season: writes the correct season to gamelog.txt on world load.
   New GUI scripts:
     - gui/guide-path: displays the cached path for minecart Guide orders.
     - gui/workshop-job: displays inputs of a workshop job and allows tweaking them.
